-------
-- 1 --
-------

* Single letters/numbers bounce around, press the key to blow up.