@@ -1,0 +1,8 @@
+package net.bcharris;
+
+public interface Game {
+    /**
+     * Called once to get the game started.
+     */
+    void init();
+}
