@@ -5,6 +5,6 @@ import jgame.JGPoint;
 public class Main {
 
     public static void main(String[] args) {
-        new BounceGame(new JGPoint(0, 0));
+        new GameSelector(new JGPoint(0, 0));
     }
 }
