@@ -1,0 +1,11 @@
+package net.bcharris;
+
+public class Size2d {
+    public final double width;
+    public final double height;
+
+    public Size2d(double width, double height) {
+        this.width = width;
+        this.height = height;
+    }
+}
